# Veeder-Root-TLS-Socket-Library

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml  main.yaml.old
docs/: 577013-950T-Serial-Protocol-Interface
lib/: tls_socket.py
src/: __init__.py  client.py  tls_3xx_functions.py  tls_client.py  tls_format.py  tls_functions.py  tls_socket.py
src/veeder_root_tls_socket_library/: __init__.py  async_socket.py  format.py  socket.py  tls_3xx.py  tls_3xx_functions.py  tls_format.py
tests/: README.md  TESTING.md  test_async_socket.py  test_format.py  test_format_functions.py  test_hex_to_float.py  test_parser.py  test_socket.py  test_split_data.py
tls_socket_lib/: client.py  tls_socket.py
