[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veeder_root_tls_socket_library"
version = "1.0.2"
authors = [
    { name = "Evan Redden", email = "redden.evan@gmail.com" }
]
description = "Socket library for querying and extracting data from Veeder-Root TLS systems."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/eredden/Veeder-Root-TLS-Socket-Library"
